src/parser.output
Terminals unused in grammar

   space_tok
   main_tok
   eol_tok
   err_tok


状态 56 conflicts: 3 shift/reduce
状态 273 conflicts: 1 shift/reduce
状态 298 conflicts: 1 shift/reduce


语法

    0 $accept: compUnit $end

    1 compUnit: %empty
    2         | compUnit ExternDecl ';'
    3         | compUnit Decl
    4         | compUnit struct_tok ident_tok '{' InnerStructDecl '}' ';'
    5         | compUnit FuncDef

    6 Decl: ConstDecl
    7     | VarDecl
    8     | StructDecl

    9 StructDecl: struct_tok ident_tok ident_tok ';'
   10           | struct_tok ident_tok ident_tok '=' '{' Expp '}' ';'
   11           | struct_tok ident_tok ident_tok '[' Exp ']' ';'
   12           | struct_tok ident_tok '*' ident_tok ';'
   13           | struct_tok ident_tok '*' ident_tok '=' ident_tok ';'
   14           | struct_tok ident_tok '*' ident_tok '=' ident_tok '[' Exp ']' ';'

   15 ExternDecl: extern_tok Prototype
   16           | extern_tok SimpleDecl

   17 SimpleDecl: int_tok ident_tok
   18           | float_tok ident_tok
   19           | int_tok '*' ident_tok
   20           | float_tok '*' ident_tok
   21           | int_tok ident_tok '[' Exp ']'
   22           | float_tok ident_tok '[' Exp ']'
   23           | int_tok ident_tok '[' ']'
   24           | float_tok ident_tok '[' ']'
   25           | struct_tok ident_tok '*' ident_tok

   26 InnerStructDecl: %empty
   27                | SimpleDecl ';'
   28                | InnerStructDecl SimpleDecl ';'

   29 Args: %empty
   30     | SimpleDecl
   31     | Args ',' SimpleDecl

   32 Prototype: void_tok ident_tok '(' Args ')'
   33          | int_tok ident_tok '(' Args ')'
   34          | float_tok ident_tok '(' Args ')'
   35          | int_tok '*' ident_tok '(' Args ')'
   36          | float_tok '*' ident_tok '(' Args ')'

   37 FuncDef: Prototype Block

   38 ConstDecl: const_tok int_tok ConstDef ';'
   39          | const_tok float_tok ConstDef ';'

   40 ConstDef: ident_tok '=' Exp
   41         | '*' ident_tok '=' '&' ident_tok
   42         | ident_tok '[' ']' '=' '{' Expp '}'
   43         | ident_tok '[' intnum_tok ']' '=' '{' Expp '}'
   44         | ConstDef ',' ident_tok '=' Exp
   45         | ConstDef ',' '*' ident_tok '=' '&' ident_tok
   46         | ConstDef ',' ident_tok '[' ']' '=' '{' Expp '}'
   47         | ConstDef ',' ident_tok '[' intnum_tok ']' '=' '{' Expp '}'

   48 Expp: Exp
   49     | Expp ',' Exp

   50 VarDecl: int_tok VarList ';'
   51        | float_tok VarList ';'

   52 VarList: VarList ',' Ident
   53        | Ident

   54 Ident: ident_tok
   55      | '*' ident_tok
   56      | '*' ident_tok '=' ident_tok
   57      | '*' ident_tok '=' ident_tok '.' ident_tok
   58      | '*' ident_tok '=' '&' ident_tok
   59      | '*' ident_tok '=' '&' ident_tok '[' Exp ']'
   60      | ident_tok '=' '*' ident_tok
   61      | ident_tok '=' ident_tok '.' ident_tok
   62      | ident_tok '=' ident_tok '(' IdentList ')'
   63      | '*' ident_tok '=' ident_tok '(' IdentList ')'
   64      | ident_tok '[' Exp ']'
   65      | ident_tok '=' Exp
   66      | ident_tok '[' ']' '=' '{' Expp '}'
   67      | ident_tok '[' Exp ']' '=' '{' Expp '}'

   68 Block: '{' BlockItemList '}'

   69 BlockItemList: %empty
   70              | BlockItemList BlockItem

   71 BlockItem: Decl
   72          | Stmt

   73 IdentList: %empty
   74          | ident_tok
   75          | intnum_tok
   76          | IdentList ',' ident_tok
   77          | IdentList ',' intnum_tok

   78 Stmt: ident_tok '=' Exp ';'
   79     | ident_tok '=' '*' ident_tok ';'
   80     | ident_tok '=' '{' Expp '}' ';'
   81     | ident_tok '=' ident_tok '.' ident_tok ';'
   82     | ident_tok '.' ident_tok '=' Exp ';'
   83     | ident_tok '.' ident_tok '=' '&' ident_tok ';'
   84     | ident_tok '=' '&' ident_tok '[' Exp ']' ';'
   85     | ident_tok '[' Exp ']' '=' Exp ';'
   86     | ident_tok '(' IdentList ')' ';'
   87     | ident_tok '=' ident_tok '(' IdentList ')' ';'
   88     | ident_tok '[' Exp ']' '=' ident_tok '(' IdentList ')' ';'
   89     | break_tok ';'
   90     | continue_tok ';'
   91     | Block
   92     | return_tok Exp ';'
   93     | if_tok '(' Cond ')' Stmt
   94     | if_tok '(' Cond ')' Stmt else_tok Stmt
   95     | while_tok '(' Cond ')' Stmt
   96     | ';'

   97 Exp: intnum_tok
   98    | floatnum_tok
   99    | ident_tok
  100    | '&' ident_tok
  101    | ident_tok '[' Exp ']'
  102    | Exp '+' Exp
  103    | Exp '-' Exp
  104    | Exp '*' Exp
  105    | Exp '/' Exp
  106    | Exp '%' Exp
  107    | '-' Exp
  108    | '(' Exp ')'

  109 Cond: Exp eq_tok Exp
  110     | Exp neq_tok Exp
  111     | Exp lt_tok Exp
  112     | Exp le_tok Exp
  113     | Exp gt_tok Exp
  114     | Exp ge_tok Exp


Terminals, with rules where they appear

$end (0) 0
'%' (37) 106
'&' (38) 41 45 58 59 83 84 100
'(' (40) 32 33 34 35 36 62 63 86 87 88 93 94 95 108
')' (41) 32 33 34 35 36 62 63 86 87 88 93 94 95 108
'*' (42) 12 13 14 19 20 25 35 36 41 45 55 56 57 58 59 60 63 79 104
'+' (43) 102
',' (44) 31 44 45 46 47 49 52 76 77
'-' (45) 103 107
'.' (46) 57 61 81 82 83
'/' (47) 105
';' (59) 2 4 9 10 11 12 13 14 27 28 38 39 50 51 78 79 80 81 82 83 84
    85 86 87 88 89 90 92 96
'=' (61) 10 13 14 40 41 42 43 44 45 46 47 56 57 58 59 60 61 62 63 65
    66 67 78 79 80 81 82 83 84 85 87 88
'[' (91) 11 14 21 22 23 24 42 43 46 47 59 64 66 67 84 85 88 101
']' (93) 11 14 21 22 23 24 42 43 46 47 59 64 66 67 84 85 88 101
'{' (123) 4 10 42 43 46 47 66 67 68 80
'}' (125) 4 10 42 43 46 47 66 67 68 80
error (256)
eq_tok (258) 109
neq_tok (259) 110
lt_tok (260) 111
le_tok (261) 112
gt_tok (262) 113
ge_tok (263) 114
space_tok (264)
while_tok (265) 95
if_tok (266) 93 94
main_tok (267)
void_tok (268) 32
int_tok (269) 17 19 21 23 33 35 38 50
float_tok (270) 18 20 22 24 34 36 39 51
const_tok (271) 38 39
else_tok (272) 94
return_tok (273) 92
intnum_tok (274) 43 47 75 77 97
floatnum_tok (275) 98
ident_tok (276) 4 9 10 11 12 13 14 17 18 19 20 21 22 23 24 25 32 33
    34 35 36 40 41 42 43 44 45 46 47 54 55 56 57 58 59 60 61 62 63
    64 65 66 67 74 76 78 79 80 81 82 83 84 85 86 87 88 99 100 101
eol_tok (277)
err_tok (278)
extern_tok (279) 15 16
break_tok (280) 89
continue_tok (281) 90
struct_tok (282) 4 9 10 11 12 13 14 25


Nonterminals, with rules where they appear

$accept (44)
    左： 0
compUnit (45)
    左： 1 2 3 4 5, 右： 0 2 3 4 5
Decl (46)
    左： 6 7 8, 右： 3 71
StructDecl (47)
    左： 9 10 11 12 13 14, 右： 8
ExternDecl (48)
    左： 15 16, 右： 2
SimpleDecl (49)
    左： 17 18 19 20 21 22 23 24 25, 右： 16 27 28 30 31
InnerStructDecl (50)
    左： 26 27 28, 右： 4 28
Args (51)
    左： 29 30 31, 右： 31 32 33 34 35 36
Prototype (52)
    左： 32 33 34 35 36, 右： 15 37
FuncDef (53)
    左： 37, 右： 5
ConstDecl (54)
    左： 38 39, 右： 6
ConstDef (55)
    左： 40 41 42 43 44 45 46 47, 右： 38 39 44 45 46 47
Expp (56)
    左： 48 49, 右： 10 42 43 46 47 49 66 67 80
VarDecl (57)
    左： 50 51, 右： 7
VarList (58)
    左： 52 53, 右： 50 51 52
Ident (59)
    左： 54 55 56 57 58 59 60 61 62 63 64 65 66 67, 右： 52 53
Block (60)
    左： 68, 右： 37 91
BlockItemList (61)
    左： 69 70, 右： 68 70
BlockItem (62)
    左： 71 72, 右： 70
IdentList (63)
    左： 73 74 75 76 77, 右： 62 63 76 77 86 87 88
Stmt (64)
    左： 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96,
    右： 72 93 94 95
Exp (65)
    左： 97 98 99 100 101 102 103 104 105 106 107 108, 右： 11
    14 21 22 40 44 48 49 59 64 65 67 78 82 84 85 88 92 101 102 103
    104 105 106 107 108 109 110 111 112 113 114
Cond (66)
    左： 109 110 111 112 113 114, 右： 93 94 95


State 0

    0 $accept: . compUnit $end

    $default  reduce using rule 1 (compUnit)

    compUnit  转到状态 1


State 1

    0 $accept: compUnit . $end
    2 compUnit: compUnit . ExternDecl ';'
    3         | compUnit . Decl
    4         | compUnit . struct_tok ident_tok '{' InnerStructDecl '}' ';'
    5         | compUnit . FuncDef

    $end        shift, and go to state 2
    void_tok    shift, and go to state 3
    int_tok     shift, and go to state 4
    float_tok   shift, and go to state 5
    const_tok   shift, and go to state 6
    extern_tok  shift, and go to state 7
    struct_tok  shift, and go to state 8

    Decl        转到状态 9
    StructDecl  转到状态 10
    ExternDecl  转到状态 11
    Prototype   转到状态 12
    FuncDef     转到状态 13
    ConstDecl   转到状态 14
    VarDecl     转到状态 15


State 2

    0 $accept: compUnit $end .

    $default  接受


State 3

   32 Prototype: void_tok . ident_tok '(' Args ')'

    ident_tok  shift, and go to state 16


State 4

   33 Prototype: int_tok . ident_tok '(' Args ')'
   35          | int_tok . '*' ident_tok '(' Args ')'
   50 VarDecl: int_tok . VarList ';'

    ident_tok  shift, and go to state 17
    '*'        shift, and go to state 18

    VarList  转到状态 19
    Ident    转到状态 20


State 5

   34 Prototype: float_tok . ident_tok '(' Args ')'
   36          | float_tok . '*' ident_tok '(' Args ')'
   51 VarDecl: float_tok . VarList ';'

    ident_tok  shift, and go to state 21
    '*'        shift, and go to state 22

    VarList  转到状态 23
    Ident    转到状态 20


State 6

   38 ConstDecl: const_tok . int_tok ConstDef ';'
   39          | const_tok . float_tok ConstDef ';'

    int_tok    shift, and go to state 24
    float_tok  shift, and go to state 25


State 7

   15 ExternDecl: extern_tok . Prototype
   16           | extern_tok . SimpleDecl

    void_tok    shift, and go to state 3
    int_tok     shift, and go to state 26
    float_tok   shift, and go to state 27
    struct_tok  shift, and go to state 28

    SimpleDecl  转到状态 29
    Prototype   转到状态 30


State 8

    4 compUnit: compUnit struct_tok . ident_tok '{' InnerStructDecl '}' ';'
    9 StructDecl: struct_tok . ident_tok ident_tok ';'
   10           | struct_tok . ident_tok ident_tok '=' '{' Expp '}' ';'
   11           | struct_tok . ident_tok ident_tok '[' Exp ']' ';'
   12           | struct_tok . ident_tok '*' ident_tok ';'
   13           | struct_tok . ident_tok '*' ident_tok '=' ident_tok ';'
   14           | struct_tok . ident_tok '*' ident_tok '=' ident_tok '[' Exp ']' ';'

    ident_tok  shift, and go to state 31


State 9

    3 compUnit: compUnit Decl .

    $default  reduce using rule 3 (compUnit)


State 10

    8 Decl: StructDecl .

    $default  reduce using rule 8 (Decl)


State 11

    2 compUnit: compUnit ExternDecl . ';'

    ';'  shift, and go to state 32


State 12

   37 FuncDef: Prototype . Block

    '{'  shift, and go to state 33

    Block  转到状态 34


State 13

    5 compUnit: compUnit FuncDef .

    $default  reduce using rule 5 (compUnit)


State 14

    6 Decl: ConstDecl .

    $default  reduce using rule 6 (Decl)


State 15

    7 Decl: VarDecl .

    $default  reduce using rule 7 (Decl)


State 16

   32 Prototype: void_tok ident_tok . '(' Args ')'

    '('  shift, and go to state 35


State 17

   33 Prototype: int_tok ident_tok . '(' Args ')'
   54 Ident: ident_tok .
   60      | ident_tok . '=' '*' ident_tok
   61      | ident_tok . '=' ident_tok '.' ident_tok
   62      | ident_tok . '=' ident_tok '(' IdentList ')'
   64      | ident_tok . '[' Exp ']'
   65      | ident_tok . '=' Exp
   66      | ident_tok . '[' ']' '=' '{' Expp '}'
   67      | ident_tok . '[' Exp ']' '=' '{' Expp '}'

    '='  shift, and go to state 36
    '['  shift, and go to state 37
    '('  shift, and go to state 38

    $default  reduce using rule 54 (Ident)


State 18

   35 Prototype: int_tok '*' . ident_tok '(' Args ')'
   55 Ident: '*' . ident_tok
   56      | '*' . ident_tok '=' ident_tok
   57      | '*' . ident_tok '=' ident_tok '.' ident_tok
   58      | '*' . ident_tok '=' '&' ident_tok
   59      | '*' . ident_tok '=' '&' ident_tok '[' Exp ']'
   63      | '*' . ident_tok '=' ident_tok '(' IdentList ')'

    ident_tok  shift, and go to state 39


State 19

   50 VarDecl: int_tok VarList . ';'
   52 VarList: VarList . ',' Ident

    ';'  shift, and go to state 40
    ','  shift, and go to state 41


State 20

   53 VarList: Ident .

    $default  reduce using rule 53 (VarList)


State 21

   34 Prototype: float_tok ident_tok . '(' Args ')'
   54 Ident: ident_tok .
   60      | ident_tok . '=' '*' ident_tok
   61      | ident_tok . '=' ident_tok '.' ident_tok
   62      | ident_tok . '=' ident_tok '(' IdentList ')'
   64      | ident_tok . '[' Exp ']'
   65      | ident_tok . '=' Exp
   66      | ident_tok . '[' ']' '=' '{' Expp '}'
   67      | ident_tok . '[' Exp ']' '=' '{' Expp '}'

    '='  shift, and go to state 36
    '['  shift, and go to state 37
    '('  shift, and go to state 42

    $default  reduce using rule 54 (Ident)


State 22

   36 Prototype: float_tok '*' . ident_tok '(' Args ')'
   55 Ident: '*' . ident_tok
   56      | '*' . ident_tok '=' ident_tok
   57      | '*' . ident_tok '=' ident_tok '.' ident_tok
   58      | '*' . ident_tok '=' '&' ident_tok
   59      | '*' . ident_tok '=' '&' ident_tok '[' Exp ']'
   63      | '*' . ident_tok '=' ident_tok '(' IdentList ')'

    ident_tok  shift, and go to state 43


State 23

   51 VarDecl: float_tok VarList . ';'
   52 VarList: VarList . ',' Ident

    ';'  shift, and go to state 44
    ','  shift, and go to state 41


State 24

   38 ConstDecl: const_tok int_tok . ConstDef ';'

    ident_tok  shift, and go to state 45
    '*'        shift, and go to state 46

    ConstDef  转到状态 47


State 25

   39 ConstDecl: const_tok float_tok . ConstDef ';'

    ident_tok  shift, and go to state 45
    '*'        shift, and go to state 46

    ConstDef  转到状态 48


State 26

   17 SimpleDecl: int_tok . ident_tok
   19           | int_tok . '*' ident_tok
   21           | int_tok . ident_tok '[' Exp ']'
   23           | int_tok . ident_tok '[' ']'
   33 Prototype: int_tok . ident_tok '(' Args ')'
   35          | int_tok . '*' ident_tok '(' Args ')'

    ident_tok  shift, and go to state 49
    '*'        shift, and go to state 50


State 27

   18 SimpleDecl: float_tok . ident_tok
   20           | float_tok . '*' ident_tok
   22           | float_tok . ident_tok '[' Exp ']'
   24           | float_tok . ident_tok '[' ']'
   34 Prototype: float_tok . ident_tok '(' Args ')'
   36          | float_tok . '*' ident_tok '(' Args ')'

    ident_tok  shift, and go to state 51
    '*'        shift, and go to state 52


State 28

   25 SimpleDecl: struct_tok . ident_tok '*' ident_tok

    ident_tok  shift, and go to state 53


State 29

   16 ExternDecl: extern_tok SimpleDecl .

    $default  reduce using rule 16 (ExternDecl)


State 30

   15 ExternDecl: extern_tok Prototype .

    $default  reduce using rule 15 (ExternDecl)


State 31

    4 compUnit: compUnit struct_tok ident_tok . '{' InnerStructDecl '}' ';'
    9 StructDecl: struct_tok ident_tok . ident_tok ';'
   10           | struct_tok ident_tok . ident_tok '=' '{' Expp '}' ';'
   11           | struct_tok ident_tok . ident_tok '[' Exp ']' ';'
   12           | struct_tok ident_tok . '*' ident_tok ';'
   13           | struct_tok ident_tok . '*' ident_tok '=' ident_tok ';'
   14           | struct_tok ident_tok . '*' ident_tok '=' ident_tok '[' Exp ']' ';'

    ident_tok  shift, and go to state 54
    '*'        shift, and go to state 55
    '{'        shift, and go to state 56


State 32

    2 compUnit: compUnit ExternDecl ';' .

    $default  reduce using rule 2 (compUnit)


State 33

   68 Block: '{' . BlockItemList '}'

    $default  reduce using rule 69 (BlockItemList)

    BlockItemList  转到状态 57


State 34

   37 FuncDef: Prototype Block .

    $default  reduce using rule 37 (FuncDef)


State 35

   32 Prototype: void_tok ident_tok '(' . Args ')'

    int_tok     shift, and go to state 58
    float_tok   shift, and go to state 59
    struct_tok  shift, and go to state 28

    $default  reduce using rule 29 (Args)

    SimpleDecl  转到状态 60
    Args        转到状态 61


State 36

   60 Ident: ident_tok '=' . '*' ident_tok
   61      | ident_tok '=' . ident_tok '.' ident_tok
   62      | ident_tok '=' . ident_tok '(' IdentList ')'
   65      | ident_tok '=' . Exp

    intnum_tok    shift, and go to state 62
    floatnum_tok  shift, and go to state 63
    ident_tok     shift, and go to state 64
    '-'           shift, and go to state 65
    '*'           shift, and go to state 66
    '('           shift, and go to state 67
    '&'           shift, and go to state 68

    Exp  转到状态 69


State 37

   64 Ident: ident_tok '[' . Exp ']'
   66      | ident_tok '[' . ']' '=' '{' Expp '}'
   67      | ident_tok '[' . Exp ']' '=' '{' Expp '}'

    intnum_tok    shift, and go to state 62
    floatnum_tok  shift, and go to state 63
    ident_tok     shift, and go to state 70
    '-'           shift, and go to state 65
    ']'           shift, and go to state 71
    '('           shift, and go to state 67
    '&'           shift, and go to state 68

    Exp  转到状态 72


State 38

   33 Prototype: int_tok ident_tok '(' . Args ')'

    int_tok     shift, and go to state 58
    float_tok   shift, and go to state 59
    struct_tok  shift, and go to state 28

    $default  reduce using rule 29 (Args)

    SimpleDecl  转到状态 60
    Args        转到状态 73


State 39

   35 Prototype: int_tok '*' ident_tok . '(' Args ')'
   55 Ident: '*' ident_tok .
   56      | '*' ident_tok . '=' ident_tok
   57      | '*' ident_tok . '=' ident_tok '.' ident_tok
   58      | '*' ident_tok . '=' '&' ident_tok
   59      | '*' ident_tok . '=' '&' ident_tok '[' Exp ']'
   63      | '*' ident_tok . '=' ident_tok '(' IdentList ')'

    '='  shift, and go to state 74
    '('  shift, and go to state 75

    $default  reduce using rule 55 (Ident)


State 40

   50 VarDecl: int_tok VarList ';' .

    $default  reduce using rule 50 (VarDecl)


State 41

   52 VarList: VarList ',' . Ident

    ident_tok  shift, and go to state 76
    '*'        shift, and go to state 77

    Ident  转到状态 78


State 42

   34 Prototype: float_tok ident_tok '(' . Args ')'

    int_tok     shift, and go to state 58
    float_tok   shift, and go to state 59
    struct_tok  shift, and go to state 28

    $default  reduce using rule 29 (Args)

    SimpleDecl  转到状态 60
    Args        转到状态 79


State 43

   36 Prototype: float_tok '*' ident_tok . '(' Args ')'
   55 Ident: '*' ident_tok .
   56      | '*' ident_tok . '=' ident_tok
   57      | '*' ident_tok . '=' ident_tok '.' ident_tok
   58      | '*' ident_tok . '=' '&' ident_tok
   59      | '*' ident_tok . '=' '&' ident_tok '[' Exp ']'
   63      | '*' ident_tok . '=' ident_tok '(' IdentList ')'

    '='  shift, and go to state 74
    '('  shift, and go to state 80

    $default  reduce using rule 55 (Ident)


State 44

   51 VarDecl: float_tok VarList ';' .

    $default  reduce using rule 51 (VarDecl)


State 45

   40 ConstDef: ident_tok . '=' Exp
   42         | ident_tok . '[' ']' '=' '{' Expp '}'
   43         | ident_tok . '[' intnum_tok ']' '=' '{' Expp '}'

    '='  shift, and go to state 81
    '['  shift, and go to state 82


State 46

   41 ConstDef: '*' . ident_tok '=' '&' ident_tok

    ident_tok  shift, and go to state 83


State 47

   38 ConstDecl: const_tok int_tok ConstDef . ';'
   44 ConstDef: ConstDef . ',' ident_tok '=' Exp
   45         | ConstDef . ',' '*' ident_tok '=' '&' ident_tok
   46         | ConstDef . ',' ident_tok '[' ']' '=' '{' Expp '}'
   47         | ConstDef . ',' ident_tok '[' intnum_tok ']' '=' '{' Expp '}'

    ';'  shift, and go to state 84
    ','  shift, and go to state 85


State 48

   39 ConstDecl: const_tok float_tok ConstDef . ';'
   44 ConstDef: ConstDef . ',' ident_tok '=' Exp
   45         | ConstDef . ',' '*' ident_tok '=' '&' ident_tok
   46         | ConstDef . ',' ident_tok '[' ']' '=' '{' Expp '}'
   47         | ConstDef . ',' ident_tok '[' intnum_tok ']' '=' '{' Expp '}'

    ';'  shift, and go to state 86
    ','  shift, and go to state 85


State 49

   17 SimpleDecl: int_tok ident_tok .
   21           | int_tok ident_tok . '[' Exp ']'
   23           | int_tok ident_tok . '[' ']'
   33 Prototype: int_tok ident_tok . '(' Args ')'

    '['  shift, and go to state 87
    '('  shift, and go to state 38

    $default  reduce using rule 17 (SimpleDecl)


State 50

   19 SimpleDecl: int_tok '*' . ident_tok
   35 Prototype: int_tok '*' . ident_tok '(' Args ')'

    ident_tok  shift, and go to state 88


State 51

   18 SimpleDecl: float_tok ident_tok .
   22           | float_tok ident_tok . '[' Exp ']'
   24           | float_tok ident_tok . '[' ']'
   34 Prototype: float_tok ident_tok . '(' Args ')'

    '['  shift, and go to state 89
    '('  shift, and go to state 42

    $default  reduce using rule 18 (SimpleDecl)


State 52

   20 SimpleDecl: float_tok '*' . ident_tok
   36 Prototype: float_tok '*' . ident_tok '(' Args ')'

    ident_tok  shift, and go to state 90


State 53

   25 SimpleDecl: struct_tok ident_tok . '*' ident_tok

    '*'  shift, and go to state 91


State 54

    9 StructDecl: struct_tok ident_tok ident_tok . ';'
   10           | struct_tok ident_tok ident_tok . '=' '{' Expp '}' ';'
   11           | struct_tok ident_tok ident_tok . '[' Exp ']' ';'

    ';'  shift, and go to state 92
    '='  shift, and go to state 93
    '['  shift, and go to state 94


State 55

   12 StructDecl: struct_tok ident_tok '*' . ident_tok ';'
   13           | struct_tok ident_tok '*' . ident_tok '=' ident_tok ';'
   14           | struct_tok ident_tok '*' . ident_tok '=' ident_tok '[' Exp ']' ';'

    ident_tok  shift, and go to state 95


State 56

    4 compUnit: compUnit struct_tok ident_tok '{' . InnerStructDecl '}' ';'

    int_tok     shift, and go to state 58
    float_tok   shift, and go to state 59
    struct_tok  shift, and go to state 28

    int_tok     [reduce using rule 26 (InnerStructDecl)]
    float_tok   [reduce using rule 26 (InnerStructDecl)]
    struct_tok  [reduce using rule 26 (InnerStructDecl)]
    $default    reduce using rule 26 (InnerStructDecl)

    SimpleDecl       转到状态 96
    InnerStructDecl  转到状态 97


State 57

   68 Block: '{' BlockItemList . '}'
   70 BlockItemList: BlockItemList . BlockItem

    while_tok     shift, and go to state 98
    if_tok        shift, and go to state 99
    int_tok       shift, and go to state 100
    float_tok     shift, and go to state 101
    const_tok     shift, and go to state 6
    return_tok    shift, and go to state 102
    ident_tok     shift, and go to state 103
    break_tok     shift, and go to state 104
    continue_tok  shift, and go to state 105
    struct_tok    shift, and go to state 106
    ';'           shift, and go to state 107
    '{'           shift, and go to state 33
    '}'           shift, and go to state 108

    Decl        转到状态 109
    StructDecl  转到状态 10
    ConstDecl   转到状态 14
    VarDecl     转到状态 15
    Block       转到状态 110
    BlockItem   转到状态 111
    Stmt        转到状态 112


State 58

   17 SimpleDecl: int_tok . ident_tok
   19           | int_tok . '*' ident_tok
   21           | int_tok . ident_tok '[' Exp ']'
   23           | int_tok . ident_tok '[' ']'

    ident_tok  shift, and go to state 113
    '*'        shift, and go to state 114


State 59

   18 SimpleDecl: float_tok . ident_tok
   20           | float_tok . '*' ident_tok
   22           | float_tok . ident_tok '[' Exp ']'
   24           | float_tok . ident_tok '[' ']'

    ident_tok  shift, and go to state 115
    '*'        shift, and go to state 116


State 60

   30 Args: SimpleDecl .

    $default  reduce using rule 30 (Args)


State 61

   31 Args: Args . ',' SimpleDecl
   32 Prototype: void_tok ident_tok '(' Args . ')'

    ','  shift, and go to state 117
    ')'  shift, and go to state 118


State 62

   97 Exp: intnum_tok .

    $default  reduce using rule 97 (Exp)


State 63

   98 Exp: floatnum_tok .

    $default  reduce using rule 98 (Exp)


State 64

   61 Ident: ident_tok '=' ident_tok . '.' ident_tok
   62      | ident_tok '=' ident_tok . '(' IdentList ')'
   99 Exp: ident_tok .
  101    | ident_tok . '[' Exp ']'

    '['  shift, and go to state 119
    '('  shift, and go to state 120
    '.'  shift, and go to state 121

    $default  reduce using rule 99 (Exp)


State 65

  107 Exp: '-' . Exp

    intnum_tok    shift, and go to state 62
    floatnum_tok  shift, and go to state 63
    ident_tok     shift, and go to state 70
    '-'           shift, and go to state 65
    '('           shift, and go to state 67
    '&'           shift, and go to state 68

    Exp  转到状态 122


State 66

   60 Ident: ident_tok '=' '*' . ident_tok

    ident_tok  shift, and go to state 123


State 67

  108 Exp: '(' . Exp ')'

    intnum_tok    shift, and go to state 62
    floatnum_tok  shift, and go to state 63
    ident_tok     shift, and go to state 70
    '-'           shift, and go to state 65
    '('           shift, and go to state 67
    '&'           shift, and go to state 68

    Exp  转到状态 124


State 68

  100 Exp: '&' . ident_tok

    ident_tok  shift, and go to state 125


State 69

   65 Ident: ident_tok '=' Exp .
  102 Exp: Exp . '+' Exp
  103    | Exp . '-' Exp
  104    | Exp . '*' Exp
  105    | Exp . '/' Exp
  106    | Exp . '%' Exp

    '-'  shift, and go to state 126
    '+'  shift, and go to state 127
    '*'  shift, and go to state 128
    '/'  shift, and go to state 129
    '%'  shift, and go to state 130

    $default  reduce using rule 65 (Ident)


State 70

   99 Exp: ident_tok .
  101    | ident_tok . '[' Exp ']'

    '['  shift, and go to state 119

    $default  reduce using rule 99 (Exp)


State 71

   66 Ident: ident_tok '[' ']' . '=' '{' Expp '}'

    '='  shift, and go to state 131


State 72

   64 Ident: ident_tok '[' Exp . ']'
   67      | ident_tok '[' Exp . ']' '=' '{' Expp '}'
  102 Exp: Exp . '+' Exp
  103    | Exp . '-' Exp
  104    | Exp . '*' Exp
  105    | Exp . '/' Exp
  106    | Exp . '%' Exp

    '-'  shift, and go to state 126
    '+'  shift, and go to state 127
    '*'  shift, and go to state 128
    '/'  shift, and go to state 129
    '%'  shift, and go to state 130
    ']'  shift, and go to state 132


State 73

   31 Args: Args . ',' SimpleDecl
   33 Prototype: int_tok ident_tok '(' Args . ')'

    ','  shift, and go to state 117
    ')'  shift, and go to state 133


State 74

   56 Ident: '*' ident_tok '=' . ident_tok
   57      | '*' ident_tok '=' . ident_tok '.' ident_tok
   58      | '*' ident_tok '=' . '&' ident_tok
   59      | '*' ident_tok '=' . '&' ident_tok '[' Exp ']'
   63      | '*' ident_tok '=' . ident_tok '(' IdentList ')'

    ident_tok  shift, and go to state 134
    '&'        shift, and go to state 135


State 75

   35 Prototype: int_tok '*' ident_tok '(' . Args ')'

    int_tok     shift, and go to state 58
    float_tok   shift, and go to state 59
    struct_tok  shift, and go to state 28

    $default  reduce using rule 29 (Args)

    SimpleDecl  转到状态 60
    Args        转到状态 136


State 76

   54 Ident: ident_tok .
   60      | ident_tok . '=' '*' ident_tok
   61      | ident_tok . '=' ident_tok '.' ident_tok
   62      | ident_tok . '=' ident_tok '(' IdentList ')'
   64      | ident_tok . '[' Exp ']'
   65      | ident_tok . '=' Exp
   66      | ident_tok . '[' ']' '=' '{' Expp '}'
   67      | ident_tok . '[' Exp ']' '=' '{' Expp '}'

    '='  shift, and go to state 36
    '['  shift, and go to state 37

    $default  reduce using rule 54 (Ident)


State 77

   55 Ident: '*' . ident_tok
   56      | '*' . ident_tok '=' ident_tok
   57      | '*' . ident_tok '=' ident_tok '.' ident_tok
   58      | '*' . ident_tok '=' '&' ident_tok
   59      | '*' . ident_tok '=' '&' ident_tok '[' Exp ']'
   63      | '*' . ident_tok '=' ident_tok '(' IdentList ')'

    ident_tok  shift, and go to state 137


State 78

   52 VarList: VarList ',' Ident .

    $default  reduce using rule 52 (VarList)


State 79

   31 Args: Args . ',' SimpleDecl
   34 Prototype: float_tok ident_tok '(' Args . ')'

    ','  shift, and go to state 117
    ')'  shift, and go to state 138


State 80

   36 Prototype: float_tok '*' ident_tok '(' . Args ')'

    int_tok     shift, and go to state 58
    float_tok   shift, and go to state 59
    struct_tok  shift, and go to state 28

    $default  reduce using rule 29 (Args)

    SimpleDecl  转到状态 60
    Args        转到状态 139


State 81

   40 ConstDef: ident_tok '=' . Exp

    intnum_tok    shift, and go to state 62
    floatnum_tok  shift, and go to state 63
    ident_tok     shift, and go to state 70
    '-'           shift, and go to state 65
    '('           shift, and go to state 67
    '&'           shift, and go to state 68

    Exp  转到状态 140


State 82

   42 ConstDef: ident_tok '[' . ']' '=' '{' Expp '}'
   43         | ident_tok '[' . intnum_tok ']' '=' '{' Expp '}'

    intnum_tok  shift, and go to state 141
    ']'         shift, and go to state 142


State 83

   41 ConstDef: '*' ident_tok . '=' '&' ident_tok

    '='  shift, and go to state 143


State 84

   38 ConstDecl: const_tok int_tok ConstDef ';' .

    $default  reduce using rule 38 (ConstDecl)


State 85

   44 ConstDef: ConstDef ',' . ident_tok '=' Exp
   45         | ConstDef ',' . '*' ident_tok '=' '&' ident_tok
   46         | ConstDef ',' . ident_tok '[' ']' '=' '{' Expp '}'
   47         | ConstDef ',' . ident_tok '[' intnum_tok ']' '=' '{' Expp '}'

    ident_tok  shift, and go to state 144
    '*'        shift, and go to state 145


State 86

   39 ConstDecl: const_tok float_tok ConstDef ';' .

    $default  reduce using rule 39 (ConstDecl)


State 87

   21 SimpleDecl: int_tok ident_tok '[' . Exp ']'
   23           | int_tok ident_tok '[' . ']'

    intnum_tok    shift, and go to state 62
    floatnum_tok  shift, and go to state 63
    ident_tok     shift, and go to state 70
    '-'           shift, and go to state 65
    ']'           shift, and go to state 146
    '('           shift, and go to state 67
    '&'           shift, and go to state 68

    Exp  转到状态 147


State 88

   19 SimpleDecl: int_tok '*' ident_tok .
   35 Prototype: int_tok '*' ident_tok . '(' Args ')'

    '('  shift, and go to state 75

    $default  reduce using rule 19 (SimpleDecl)


State 89

   22 SimpleDecl: float_tok ident_tok '[' . Exp ']'
   24           | float_tok ident_tok '[' . ']'
